完成品牌删除接口
